--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,17 @@
 p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+/* Stylinf for buttons */
+button {
+    border-style: solid;
+    border-color: darkslategray;
+    border-radius: 5px;
+    background-color: olive;
+    color: white;
+    margin: 5px;
+}
+
 /* Display items with flex and center horizontally and vertically */
 .container {
     display: flex;
@@ -32,4 +43,9 @@ p {
 #title {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: cadetblue;
+}
+
+#cover-image {
+    height: 100px;
+    width: 150px;
 }
