commenting and volume controls

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-/* Stylinf for buttons */
+/* Styling for buttons */
 button {
     border-style: solid;
     border-color: darkslategray;
