--- a/style/style.css
+++ b/style/style.css
@@ -5,16 +5,17 @@
 
 p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 10px;
 }
 
 /* Styling for buttons */
 button {
-    border-color: darkslategray;
+    border-color: rgb(255, 255, 255);
     border-radius: 5px;
     background-color: olive;
     color: white;
-    margin: 4px;
     padding: 4px;
+    margin: 4px;
 }
 
 /* Display items with flex and center horizontally and vertically */
@@ -22,6 +23,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 
 /* Container properties + arrange items vertically */
@@ -53,6 +55,7 @@ button {
 #title {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: cadetblue;
+    margin: 5px;
 }
 
 #cover-image {
