styling and changing update progress bar

--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,7 @@ button {
 #main-container {
     width: 100vw;
     height: 100vh;
+    background-color: rgb(197, 216, 222);
 }
 
 /* Styles for the audio container*/
@@ -49,6 +50,7 @@ button {
     width: 35%;
     margin-top: 10px;
     background-color: beige;
+    border-radius: 10px;
 }
 
 /* Style for title text */
