--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ p {
 button {
     border-color: rgb(255, 255, 255);
     border-radius: 5px;
-    background-color: olive;
+    background-color: cadetblue;
     color: white;
     padding: 4px;
     margin: 4px;
@@ -49,7 +49,7 @@ button {
     height: 300px;
     width: 35%;
     margin-top: 10px;
-    background-color: beige;
+    background-color: rgb(211, 232, 212);
     border-radius: 10px;
 }
 
