--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ button {
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     padding: 10px;
 }
 
@@ -51,7 +51,6 @@ button {
     margin-top: 10px;
     background-color: rgb(211, 232, 212);
     border-radius: 10px;
-    /* position: absolute; */
 }
 
 /* Style for title text */
@@ -59,6 +58,8 @@ button {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: cadetblue;
     margin: 5px;
+    margin-bottom: 400px;
+    position: absolute;
 }
 
 #cover-image {
