--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,9 @@ p {
 
 /* Styling for buttons */
 button {
-    border-color: rgb(255, 255, 255);
+    border-color: #c29163;
     border-radius: 5px;
-    background-color: cadetblue;
+    background-color: #F9B97F;
     color: white;
     padding: 4px;
     margin: 4px;
@@ -22,7 +22,7 @@ button {
 .container {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     padding: 10px;
 }
 
@@ -38,10 +38,16 @@ button {
     justify-content: space-evenly;
 }
 
+.play-options{
+    width: 60px;
+    height: 40px;
+    margin: 40px;
+}
+
 #main-container {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(197, 216, 222);
+    background-color: #b9d2d6;
 }
 
 /* Styles for the audio container*/
@@ -49,14 +55,15 @@ button {
     height: 300px;
     width: 35%;
     margin-top: 10px;
-    background-color: rgb(211, 232, 212);
+    background-color: #d1e4be;
     border-radius: 10px;
+    position: relative;
 }
 
 /* Style for title text */
 #title {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: cadetblue;
+    color: #567B81;
     margin: 5px;
     margin-bottom: 400px;
     position: absolute;
